tests/negative/regression/r28.orng
fn main() -> Int {
    let ident = while true ; impl main for comptime { } { } { }
}
